# spatial-selecta

./: .cursorrules  .dockerignore  .env.docker  .env.example  .env.production.example  .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .renderignore  AGENT_KNOWLEDGE_BASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOY_NOW.md  DNS_HOSTING_GUIDE.md  DOCKER_IMPLEMENTATION.md  Dockerfile  Dockerfile.frontend  ENV_SETUP_SUMMARY.md  ENV_VERIFICATION.md  GEMINI.md  GODADDY_DOMAIN_SETUP.md  IMPLEMENTATION.md  LICENSE  PRE_LAUNCH_CHECKLIST.md  PR_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  REPOSITORY_VISIBILITY_ASSESSMENT.md  SECURITY.md  SECURITY_REVIEW.md  SETUP.md  TRACK_DATA_FORMAT.md  agents.md  app.js  apple_music_client.py  data.json  (+18 more)
.agent/workflows/: pre-commit-checklist.md  pre-task.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  track_addition.md
Documentation/: DOCUMENTATION_INDEX.md  README.md
Documentation/Guides/: DEVELOPMENT.md  SETUP.md
backend/: README.md  __init__.py  apple_music_client.py  database.py  main.py  models.py  scheduler.py  schemas.py  setup.py
docker/: README.md  generate-ssl-cert.sh  nginx-frontend.conf  nginx.conf
docs/: AGENTS.md  CHECKLIST.md  DEPLOYMENT.md  DOCKER.md  SECURITY.md
documentation/: DOCUMENTATION_INDEX.md  README.md
scripts/: auto_refresh_token.sh  check_counts.py  manual_sync.py  refresh_token.py  standardize_repo.sh
tests/: test_api_basic.py
(+10 files in other folders)
