[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-selecta"
version = "0.1.0"
description = "Tracks Dolby Atmos Music releases on Apple Music"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "schedule",
    "python-dotenv",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
  ^venv.*
  | ^\.venv
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
